# kmer_sets_benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
results/results-fmsi/: fmsi-13-11-25-results.k31.bench.json  fmsi-17-11-25-results.k63.bench.json  fmsi-17-11-25-results.k63.streaming-query-high-hit.json  fmsi-20-11-25-results.k31.bench.json  fmsi-20-11-25-results.k31.streaming-query-high-hit.json  fmsi-20-11-25-results.k63.bench.json  fmsi-20-11-25-results.k63.streaming-query-high-hit.json
results/results-fmsi-k31/: fmsi-13-11-25-results.k31.streaming-query-high-hit.json
results/results-sbwt-k31/: sbwt-12-11-25-results.k31.bench.json  sbwt-12-11-25-results.k31.streaming-query-high-hit.json
script/: build_fmsi_indexes.sh  build_sbwt_indexes.sh  build_sshash_indexes.sh  query_fmsi_indexes.sh  query_sbwt_indexes.sh  query_sshash_indexes.sh
src/: common.hpp  fmsi_benchmark.cpp  sbwt_benchmark.cpp  sbwt_example.cpp  sshash_benchmark.cpp
